fixed overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -626,9 +626,18 @@ body, html {
       padding-left: 10px;
       h6 {
         margin-bottom: 3px;
+        @media screen and (min-width: 768px) and (max-width: 1200px) {
+          margin-bottom: 5px;
+          margin-top: 15px;
+        }
       }
-      small {
-        margin-bottom: 10px;
+      li:first-child {
+        h6 {
+          margin-top: 5px;
+          @media screen and (min-width: 768px) and (max-width: 1200px) {
+              margin-top: 5px;
+          }
+        }
       }
     }
   }
